--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "calculo-cpf",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "dev": "bun run src/index.ts",
+    "test": "bun test"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
